--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,22 +1,34 @@
 pipeline {
     agent any
+
+    tools {
+        nodejs "Node18"
+    }
+
     stages {
         stage('Install Dependencies') {
             steps {
                 sh 'npm install'
             }
         }
+
+        stage('Install Playwright Browsers') {
+            steps {
+                sh 'npx playwright install --with-deps'
+            }
+        }
+
         stage('Run Playwright Tests') {
             steps {
                 sh 'npx playwright test'
             }
         }
     }
+
     post {
         always {
             archiveArtifacts artifacts: 'playwright-report/**', fingerprint: true
-                        archiveArtifacts artifacts: 'login-page.png', fingerprint: true
-
+            archiveArtifacts artifacts: 'login-page.png', fingerprint: true
         }
     }
 }
